fix: add --enable-native-access to AOT training run